es-kinaba: Updated README.md